make test and CLI cpp file, compile to test: tjson-test, CLI: tjson

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,16 +5,13 @@ set(CMAKE_CXX_COMPILER "g++")
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_CXX_STANDARD 20)
 
-# note: CMAKE_BUILD_TYPE is set to Debug by default
-set(CMAKE_BUILD_TYPE Debug)
-
-message(STATUS "[${CMAKE_BUILD_TYPE}] ")
-message(STATUS "${CMAKE_CXX_COMPILER}")
-
+# note: CMAKE_BUILD_TYPE is set to empty by default
 if(CMAKE_BUILD_TYPE MATCHES Debug)
   set(EXECUTABLE_OUTPUT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/bin-debug/")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
 else()
   set(EXECUTABLE_OUTPUT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/bin-release/")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
 endif()
 
 project(
@@ -22,14 +19,17 @@ project(
   VERSION 0.1.0
   LANGUAGES CXX)
 
-if("${CMAKE_BUILD_TYPE}" STREQUAL "Release")
-  add_executable("${PROJECT_NAME}" main.cc)
-else()
-  add_executable("${PROJECT_NAME}" test.cc)
-endif()
+add_executable("${PROJECT_NAME}-test" test.cc)
+add_executable("${PROJECT_NAME}" CLI.cc)
+
+target_include_directories(
+  "${PROJECT_NAME}-test"
+  PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/header-only/include/")
 
 target_include_directories(
   "${PROJECT_NAME}" PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/header-only/include/")
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror")
+message(STATUS "[${CMAKE_BUILD_TYPE}] ")
+message(STATUS "${CMAKE_CXX_COMPILER}")
 message("${CMAKE_CXX_FLAGS}")
